[package]
edition = "2021"
name = "queryer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"

[[example]]
name = "covid"

[dependencies]
anyhow = "1"
async-trait = "0.1"
polars = {version = "0.15", features = ["json", "lazy"]}
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
sqlparser = "0.10"
tokio = {version = "1", features = ["fs"]}
tracing = "0.1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.2"
